--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -66,6 +66,7 @@
    Experiments
    ========================================================================== */
 
+@import "module/_facia";
 
 /* ==========================================================================
    Icons
