--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -1,28 +1,15 @@
 @(block: Trailblock, page: FrontPage)(implicit request: RequestHeader)
 
 <section
-    class="front-section zone-@block.description.section"
-    data-link-name="block | @block.description.name"
-    data-link-context="front-trails/@block.description.section">
+    class="facia-section"
+    data-link-name="block | @block.description.name">
 
-    @if(block.description.id != "") {
-        @if("/" + block.description.id == request.path) {
-            @fragments.headers.sectionHead(block.description.name)
-        } else {
-            @fragments.headers.frontSectionHead(block.description, page.isNetworkFront, Some(Edition(request)))
-        }
+    @block.description.style match {
+        case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
+        case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
+        case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
+        case Some(TopStories)   => { @trailblocks.topStories(block.trails) }
+        case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
     }
-
-    <div class="trailblock front-trailblock-@SafeName(block.description) @if(block.description.showMore){ js-show-more}"
-        data-count="@block.description.numItemsVisible"
-        data-section-id="@block.description.id">
-
-        @block.description.style match {
-            case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
-            case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
-            case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
-            case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
-        }
-    </div>
 
 </section>
