Football matches look good on desktop

--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -195,6 +195,7 @@ video {
     }
     .d-show-cta-wrapper,
     .article-head,
+    .after-header,
     .article__inner {
         padding-right: $a-rightCol-width + $gs-gutter !important;
         padding-left: 0;
@@ -224,6 +225,7 @@ video {
     }
     .d-show-cta-wrapper,
     .article-head,
+    .after-header,
     .article__inner {
         padding-left: $a-leftCol-width + $gs-gutter !important;
     }
