--- a/sport/app/views/fragments/cricketFullScorecard.scala.html
+++ b/sport/app/views/fragments/cricketFullScorecard.scala.html
@@ -64,13 +64,13 @@
                         @if(innings.penalties > 0){ @(innings.penalties)p }
                     </td>
                     <td>@innings.extras</td>
-                    <td class="sport-fullscorecard__additional" colspan=3>&nbsp;</td>
+                    <td class="sport-fullscorecard__additional" colspan="3">&nbsp;</td>
                 </tr>
                 <tr>
                     <td>Total</td>
                     <td class="sport-fullscorecard__additional">for @innings.wickets</td>
                     <td>@innings.runsScored</td>
-                    <td class="sport-fullscorecard__additional" colspan=3>@innings.overs overs</td>
+                    <td class="sport-fullscorecard__additional" colspan="3">@innings.overs overs</td>
                 </tr>
             </tbody>
         </table>
