--- a/sport/app/views/fragments/cricketMiniScorecard.scala.html
+++ b/sport/app/views/fragments/cricketMiniScorecard.scala.html
@@ -29,7 +29,8 @@
                             @theMatch.firstInBatsman match {
                                 case Some(batsman) => {
                                 <tr>
-                                    <td>@batsman.name
+                                    <td>
+                                        @batsman.name
                                         @if(batsman.onStrike){*}
                                     </td>
                                     <td>
@@ -41,7 +42,8 @@
                             @theMatch.secondInBatsman match {
                                 case Some(batsman) => {
                                 <tr>
-                                    <td>@batsman.name
+                                    <td>
+                                        @batsman.name
                                         @if(batsman.onStrike){*}
                                     </td>
                                     <td>
@@ -55,8 +57,8 @@
                     <table class="sport-miniscorecard__detail">
                         <thead class="h">
                             <tr>
-                                <td>InfoItem</td>
-                                <td>Description</td>
+                                <td>Bowling / Last Out</td>
+                                <td>Batsman</td>
                             </tr>
                         </thead>
                         <tbody>
@@ -75,7 +77,8 @@
                             @theMatch.lastOut match {
                                 case Some(batsman) => {
                                 <tr>
-                                    <td>Last Out:
+                                    <td>
+                                        Last Out:
                                     </td>
                                     <td>
                                         @batsman.name @batsman.runs
