--- a/admin/app/views/admin_main.scala.html
+++ b/admin/app/views/admin_main.scala.html
@@ -29,6 +29,11 @@
                 }
             }
         </script>
+
+        <script src="@routes.Assets.at("javascripts/components/jquery/jquery.js")"></script>
+        <script src="@routes.Assets.at("javascripts/components/jquery-ui/ui/jquery-ui.js")"></script>
+        <script src="@routes.Assets.at("javascripts/components/sparklines/jquery.sparkline.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/components/bootstrap.css/js/bootstrap.js")"></script>
         <script src="@routes.Assets.at("javascripts/components/curl/dist/curl-with-js-and-domReady/curl.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/components/underscore/underscore.js")" type="text/javascript"></script>
 
@@ -40,6 +45,7 @@
                 }
             });
         </script>
+
 
     </head>
     <body>
@@ -63,9 +69,6 @@
     
     @content
 
-    <script src="@routes.Assets.at("javascripts/components/jquery/jquery.js")"></script>
-    <script src="@routes.Assets.at("javascripts/components/jquery-ui/ui/jquery-ui.js")"></script>
-    <script src="@routes.Assets.at("javascripts/components/bootstrap.css/js/bootstrap.js")"></script>
     <link href='//fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
 
