--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -683,6 +683,26 @@ a.cta, .cta a {
     text-align: right;
 }
 
+.fronts .trail_stats {
+    width: 100%;
+    clear: both;
+    font-size: 10px;
+    height: 25px;
+}
+
+.fronts .pageviews {
+    color: #d61d00;
+    float: right;
+    margin: 0 0 0 5px;
+    color: #666;
+    font-weight: bold;
+}
+
+.fronts .pageviews-graph canvas {
+    max-width: 80%;
+    float: right;
+}
+
 /** http://localhost:9003/analytics/browsers */
 
 #usage {
