Rename hyphenation class to match coding conventions

--- a/common/app/assets/stylesheets/base/_helpers.scss
+++ b/common/app/assets/stylesheets/base/_helpers.scss
@@ -78,7 +78,7 @@
  * Browser support for hyphenation: http://caniuse.com/#search=hyphenation
  */
 
-.u-textHyphenate {
+.u-text-hyphenate {
   word-wrap: break-word;
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
