Remove duplicate colour variable

--- a/common/app/assets/stylesheets/module/_forms.scss
+++ b/common/app/assets/stylesheets/module/_forms.scss
@@ -71,7 +71,7 @@ label,
 }
 
 .submit-input {
-    background: $ctaBlue;
+    background: $linkBlue;
     border: 0 none;
     color: #fff;
     font-size: 14px;
