Provide config to IdApiClient
It now points at the correct API root, provided by the configuration.

Also corrects the method for the client's authBrowser, which involves
introducing optional POST bodies.

--- a/identity/app/views/signin.scala.html
+++ b/identity/app/views/signin.scala.html
@@ -9,7 +9,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu pharetra sapien</p>
 
     @if(signinForm.globalError.isDefined) {
-        <div class="form-field__error text-input__note">@signinForm.globalErrors.mkString(", ")</div>
+        <div class="form-field__error text-input__note">@signinForm.globalErrors.map(_.message).mkString(", ")</div>
     }
 
     <ul class="form-fields">
