Remove unused div

--- a/interactive/app/views/fragments/interactiveBody.scala.html
+++ b/interactive/app/views/fragments/interactiveBody.scala.html
@@ -9,16 +9,8 @@
     itemprop="mainContentOfPage" itemscope itemtype="@interactive.schemaType" role="main">
 
      <div class="article__container">
-         
-        <div class="article-body from-content-api">
-
-            <figure class="interactive" data-interactive="@request.path.drop(1)">
-                <!-- FIXME using data-interactive attributes is fine until data comes from Composer -->
-            </figure>
-
-        </div>
-    </div>
-
+         <figure class="interactive" data-interactive="@request.path.drop(1)"></figure>
+     </div>
 </article>
 
 </div>
