--- a/common/app/assets/stylesheets/module/_facia.scss
+++ b/common/app/assets/stylesheets/module/_facia.scss
@@ -59,34 +59,57 @@
     .trails {
         overflow: hidden;
         margin-top: $baseline*4;
+        width: 100%;
+        max-width: retrieve-breakpoint-width(wide);
     }
-    .trail__count {
-        top: auto;
-        bottom: 10px;
-        left: 10px;
-        right: auto;
+    .trail {
+        float: left;
+        padding: 0;
+        border: none;
+    }
+
+    .trails-count-1 {
+        .trail {
+            background-color: #005688;
+            width: 100%;
+        }
+        .trail__image {
+            height: 100%;
+            margin-right: 20px;
+            float: left;
+        }
+        .trail__title {
+            color: #ffffff;
+            padding: $baseline*2 $baseline*2 0;
+        }
+        .trail__standfirst {
+            color: #ffffff;
+            margin: $baseline*3 0 0;
+            padding: $baseline*2 $baseline*2 0;
+        }
     }
 
     @include mq(0, tablet) {
 
         .trail:nth-child(1) {
-            padding: 0;
-
-            .trail__image {
+            .trail__image{
                 width: 100%;
-                display: block;
+                margin: 0;
             }
             .trail__title {
                 @include font($serif, 700, 20, 22);
-                color: #ffffff;
-                position:absolute;
-                bottom:0;
-                background:rgba(0, 86, 136, 0.8);
-                padding: $baseline*2;
+                position: absolute;
+                bottom: 0;
+                background: rgba(0, 86, 136, 0.8);
+                padding-bottom: $baseline*2;
                 width: 100%;
                 @include box-sizing(border-box);
             }
+            .trail__standfirst {
+                display: none;
+            }
         }
+
         .trail:nth-child(2) {
             .trail__image {
                 display: none;
@@ -101,42 +124,43 @@
 
     }
 
-    @include mq(tablet) {
-
-        .trails {
-            width: 1260px;
-        }
-        .trail {
-            float: left;
-            padding: 0;
-            border:none;
-        }
+    @include mq(tablet, desktop) {
 
         .trails-count-1 {
             .trail {
-                background-color: #005688;
-                width: 100%;
-                height: 372px;
-
-                .trail__image {
-                    width: 620px;
-                    height: 100%;
-                    margin-right: 20px;
-                    float: left;
-                }
-                .trail__title {
-                    @include font($serifheadline, 700, 40, 42);
-                    color: #ffffff;
-                    padding: $baseline*2 $baseline*2 0;
-                }
-                .trail__standfirst {
-                    @include font($serifheadline, normal, 30, 32);
-                    color: #ffffff;
-                    margin: $baseline*3 0 0;
-                    padding: $baseline*2 $baseline*2 0;
-                }
+                height: 250px;
             }
         }
+
+    }
+
+    @include mq(desktop, wide) {
+
+        .trails-count-1 {
+            .trail {
+                height: 300px;
+            }
+        }
+
+    }
+
+    @include mq(wide) {
+
+        .trails-count-1 {
+            .trail {
+                height: 372px;
+            }
+            .trail__title {
+                @include font($serifheadline, 700, 40, 42);
+            }
+            .trail__standfirst {
+                @include font($serifheadline, normal, 30, 32);
+            }
+        }
+
+
+
+
 
         .trails-count-2 {
             .trail:nth-child(1) {
