Adds Organisation microdata to the header template

--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -2,10 +2,10 @@
 @import conf.Switches.SearchSwitch
 @import conf.Switches.IdentityProfileNavigationSwitch
 
-<header id="header" role="banner" data-link-name="global navigation: header">
+<header id="header" role="banner" data-link-name="global navigation: header" itemscope itemtype="http://schema.org/Organization">
     <div class="header__inner gs-container cf">
         <a href="@LinkTo{/}"
-            id="logo" class="i i-guardian-logo" data-link-name="site logo">The Guardian</a>
+            id="logo" class="i i-guardian-logo" data-link-name="site logo" itemprop="url">The Guardian</a>
 
         <span class="beta">Beta</span>
 
