--- a/applications/app/views/fragments/galleryBody.scala.html
+++ b/applications/app/views/fragments/galleryBody.scala.html
@@ -15,55 +15,64 @@
 
             @fragments.byline(gallery.byline, gallery)
 
-            <p class="js-gallery-nav box-indent gallery-nav type-11">
 
-                @if(index > 1) {
-                <a class="js-gallery-prev gallery-prev control" data-link-name="Gallery Previous" data-is-ajax="true"
-                   href="?index=@(index - 1)">Previous</a>
-                } else {
-                <a class="js-gallery-prev gallery-prev is-off control" data-link-name="Gallery Previous" data-is-ajax="true"
-                   href="javascript://">Previous</a>
-                }
+            <div class="gallerytest--var-a">
+                <p class="js-gallery-nav box-indent gallery-nav type-11">
 
-                Image <span class="js-gallery-index">@index</span> of @gallery.size
+                    @if(index > 1) {
+                        <a class="js-gallery-prev gallery-prev control" data-link-name="Gallery Previous" data-is-ajax="true"
+                        href="?index=@(index - 1)">Previous</a>
+                    } else {
+                        <a class="js-gallery-prev gallery-prev is-off control" data-link-name="Gallery Previous" data-is-ajax="true"
+                        href="javascript://">Previous</a>
+                    }
 
-                <span class="js-toggle-fullscreen gallery-fullscreen-toggle js-visible is-off">
-                    Fullscreen <i class="i i-fullscreen-toggle"></i>
-                </span>
+                    Image <span class="js-gallery-index">@index</span> of @gallery.size
 
-                @if(index < gallery.size) {
-                <a class="gallery-next js-gallery-next control" data-link-name="Gallery Next" data-is-ajax="true"
-                   href="?index=@(index + 1)">Next</a>
-                } else {
-                <a class="js-gallery-next gallery-next control" data-link-name="Gallery Next" data-is-ajax="true" data-next="trail"
-                   href="?trail=true">Next</a>
-                }
-            </p>
+                    <span class="js-toggle-fullscreen gallery-fullscreen-toggle js-visible is-off">
+                        Fullscreen <i class="i i-fullscreen-toggle"></i>
+                    </span>
 
-            <div class="js-gallery-holder gallery-container">
-                <ul class="unstyled">
+                    @if(index < gallery.size) {
+                        <a class="gallery-next js-gallery-next control" data-link-name="Gallery Next" data-is-ajax="true"
+                        href="?index=@(index + 1)">Next</a>
+                    } else {
+                        <a class="js-gallery-next gallery-next control" data-link-name="Gallery Next" data-is-ajax="true" data-next="trail"
+                        href="?trail=true">Next</a>
+                    }
+                </p>
+
+                <div class="js-gallery-holder gallery-container">
+                    <ul class="unstyled">
                     @gallery.images.zipWithRowInfo.map{ case(image, row) =>
-                    @if(row.rowNum == index) {
-                    <li class="js-gallery-item-@row.rowNum js-current-gallery-slide" data-image="true"
-                        data-index="@row.rowNum" data-total="@gallery.size">
-                        <img class="js-gallery-img maxed @if(image.width >= image.height){landscape} else {portrait}"
-                             src="@image.path" data-width="@image.width" data-height="@image.height" />
-                        } else {
-                    <li class="js-gallery-item-@row.rowNum is-off" data-image="false" data-index="@row.rowNum"
-                        data-total="@gallery.size" data-src="@image.path" data-fullsrc='@image.path'
+                        @if(row.rowNum == index) {
+                            <li class="js-gallery-item-@row.rowNum js-current-gallery-slide" data-image="true"
+                            data-index="@row.rowNum" data-total="@gallery.size">
+                                <img class="js-gallery-img maxed @if(image.width >= image.height){landscape} else {portrait}"
+                                src="@image.path" data-width="@image.width" data-height="@image.height" />
+                                } else {
+                            <li class="js-gallery-item-@row.rowNum is-off" data-image="false" data-index="@row.rowNum"
+                            data-total="@gallery.size" data-src="@image.path" data-fullsrc='@image.path'
 
-                        data-orientation="@if(image.width >= image.height){landscape} else {portrait}"
-                        data-width="@image.width" data-height="@image.height">
-                        }
+                            data-orientation="@if(image.width >= image.height){landscape} else {portrait}"
+                            data-width="@image.width" data-height="@image.height">
+                            }
 
-                        <div class="gallery-caption">
-                            <p class="caption type-12">@Html(image.caption.getOrElse(""))</p>
-                            <p class="caption-credit type-12">@image.credit</p>
-                        </div>
+                    <div class="gallery-caption">
+                        <p class="caption type-12">@Html(image.caption.getOrElse(""))</p>
+                        <p class="caption-credit type-12">@image.credit</p>
+                    </div>
                     </li>
                     }
-                </ul>
+                    </ul>
+                </div>
             </div>
+
+            <div class="gallerytest--var-b">
+                @fragments.galleryThumbs(gallery)
+            </div>
+
+
 
             @fragments.standfirst(gallery)
 
